@@ -444,10 +444,61 @@ function workflow_transition_form($form, &$form_state, $field, $instance, $entit
   $items = array();
   $delta = 0;
   $element = array();
-  $langcode = 'und';
+  $langcode = LANGUAGE_NONE;
   $form += $widget->formElement($items, $delta, $element, $langcode, $form, $form_state);
 
   return $form;
+}
+
+/**
+ * Form builder. Move action buttons next to the 'Save'/'Delete' buttons.
+ *
+ * This is only used if the set the 'options widget' to 'action buttons'.
+ * Do not use with multiple workflows per entity: confusing UX.
+ */
+function workflow_form_alter(&$form, &$form_state, $form_id) {
+  if (!$form['#type'] == 'form') {
+    return;
+  }
+  // @todo: find a fast way to quit this form if not applicable.
+
+  // Find the first workflow.
+  // (So this won't work with multiple workflows per entity.)
+  $workflow_form = array();
+  foreach (element_children($form) as $key) {
+    if (isset($form[$key][LANGUAGE_NONE][0]['workflow'])) {
+      // Reference the Workflow Form, we'll remove the buttons later.
+      $workflow_form = &$form[$key][LANGUAGE_NONE][0];
+      // Stop looping of found.
+      break;
+    }
+  }
+
+  if (!$workflow_form) {
+    return;
+  }
+
+  foreach ($form['actions'] as $key => $action) {
+    // Find the default submit button.
+    if (is_array($action) && $key == 'submit') {
+      foreach ($workflow_form['workflow']['submit_sid'] as $key => $workflow_submit_button) {
+        // Make the workflow button act exactly like a submit button.
+        if (isset($action['#submit'])) {
+          $workflow_submit_button['#submit'] = $action['#submit'];
+        }
+        // Make sure they show up in order, but before everything else.
+        $workflow_submit_button['#weight'] += -5;
+        // Make this a valid action (places the button with other buttons).
+        // Note that this also prevents overriding of the submit handlers
+        // by other submit buttons, but that's just a side effect
+        $form['actions']['workflow_'.$key] = $workflow_submit_button;
+      }
+      // Remove the submit button.
+      unset($form['actions']['submit']);
+      // Remove the workflow buttons from higher up in the page.
+      unset($workflow_form['workflow']['submit_sid']);
+    }
+  }
 }
 
 /**
@@ -459,11 +510,24 @@ function workflow_transition_form($form, &$form_state, $field, $instance, $entit
  */
 function workflow_transition_form_submit($form, &$form_state) {
   // Retrieve the data from the form.
-  $field = $form_state['values']['workflow_field'];
-  $instance = $form_state['values']['workflow_instance'];
-  $entity_type = $form_state['values']['workflow_entity_type'];
-  $entity = $form_state['values']['workflow_entity'];
-  $field_name = $field['field_name'];
+  if (isset($form_state['values']['workflow_field'])) {
+    // We are on a Entity View page or Workflow History Tab page.
+    $field = $form_state['values']['workflow_field'];
+    $instance = $form_state['values']['workflow_instance'];
+    $entity_type = $form_state['values']['workflow_entity_type'];
+    $entity = $form_state['values']['workflow_entity'];
+    $field_name = $field['field_name'];
+  }
+  else {
+    // We are on an Entity/Node/Comment Form page.
+    $field_name = $form_state['triggering_element']['#workflow_field_name'];
+    if ($field_name) {
+      $element = $form_state['input'][$field_name];
+    }
+    else {
+      // @todo: Workflow Node.
+    }
+  }
 
   // Determine if the transition is forced.
   // This can be set by a 'workflow_vbo action' in an additional form element.
@@ -485,7 +549,7 @@ function workflow_transition_form_submit($form, &$form_state) {
     else {
       // Save $entity, but only if sid has changed.
       // Use field_attach_update for this? Save always?
-      $entity->{$field_name}['und'][0]['workflow'] = $form_state['input'];
+      $entity->{$field_name}[LANGUAGE_NONE][0]['workflow'] = $form_state['input'];
       entity_save($entity_type, $entity);
     }
   }
@@ -516,7 +580,8 @@ function _workflow_transition_form_element_validate_time($element, &$form_state,
 /**
  * Submit callback function for the Workflow Form / DefaultWidget.
  *
- * When using action buttons in Workflow form, sets the new state to proper
+ * This is only used when using action buttons in Workflow form.
+ * It sets the new state to proper
  * element and sets a submit function if needed, making sure the action is
  * executed, influencing function core/includes/form.inc/form_execute_handlers().
  * (While constructing the Workflow form, we were not yet aware of the submit
@@ -526,39 +591,21 @@ function _workflow_transition_form_element_validate_time($element, &$form_state,
 function _workflow_transition_form_validate_buttons($form, &$form_state) {
   $field_name = $form_state['triggering_element']['#workflow_field_name'];
   $new_sid = $form_state['triggering_element']['#workflow_sid'];
-
-  if (count($form_state['triggering_element']['#submit'])) {
+/*
+  if (isset($form_state['triggering_element']['#submit'])) {
     // We are on a View page or History tab. Try to fix the form_state.
-    $form_state['input']['workflow_sid'] = $new_sid;
-
-    // Nothing more to do: the correct submit button is already added.
+  else {
+    // We are on a Node/Entity/Comment form. Try to fix the form_state.
   }
-  elseif (!empty($form_state['buttons'][0]['#submit'])) {
-    // We are on a Node form. Try to fix the form_state.
-    if ($field_name) {
-      $form_state['values'][$field_name]['und'][0]['value'] = $new_sid;
-    }
-    else {
-      $form_state['values']['workflow_sid'] = $new_sid;
-    }
+ */
 
-    // Add the submit handler of the first button (hopefully the Save button).
-    // Perhaps a better way is to search the button where ['#value'] == ['values']['submit'].
-    if (!in_array(reset($form_state['buttons'][0]['#submit']), $form_state['submit_handlers'])) {
-      $form_state['submit_handlers'] += $form_state['buttons'][0]['#submit'];
-    }
+  if ($field_name) {
+    $form_state['input']['workflow_sid'] = $new_sid;
+    $form_state['values'][$field_name][LANGUAGE_NONE][0]['workflow']['workflow_sid'] = $new_sid;
   }
   else {
-    // (Let's hope) We are on a Comment form. Try to fix the form_state.
-    // Somehow, the Save button does not have a submit callback (the Preview button has).
-    if ($field_name) {
-      $form_state['values'][$field_name]['und'][0]['workflow']['workflow_sid'] = $new_sid;
-      $form_state['submit_handlers'] += array('comment_form_submit');
-    }
-    else {
-      $form_state['values']['workflow_sid'] = $new_sid;
-      $form_state['submit_handlers'] += array('comment_form_submit');
-    }
+    $form_state['input']['workflow_sid'] = $new_sid;
+    $form_state['values']['workflow_sid'] = $new_sid;
   }
 }
 
@@ -591,7 +638,7 @@ function workflow_execute_transition($entity_type, $entity, $field_name, $transi
   if ($field_name) {
     // Do a separate update to update the field (Workflow Field API)
     // This will call hook_field_update() and WorkflowFieldDefaultWidget::submit().
-    $entity->{$field_name}['und'][0]['transition'] = $transition;
+    $entity->{$field_name}[LANGUAGE_NONE][0]['transition'] = $transition;
     // @todo: perhaps use field_attach_update, for better performance, and not change node properties.
     // @todo: if transition is scheduled or new_sid == old_sid and no comment, proceed as if no $field_name.
     entity_save($entity_type, $entity);
@@ -748,12 +795,12 @@ function workflow_node_current_state($entity, $entity_type = 'node', $field_name
     }
 //    elseif (isset($entity->original)) {
 //      // A changed node.
-//      $items = isset($entity->original->{$field_name}['und']) ? $entity->original->{$field_name}['und'] : NULL;
+//      $items = isset($entity->original->{$field_name}[LANGUAGE_NONE]) ? $entity->original->{$field_name}[LANGUAGE_NONE] : NULL;
 //      $sid = ($items) ? _workflow_get_sid_by_items($items) : FALSE;
 //    }
     else {
       // A normal node, on Node view page / Workflow history tab.
-      $items = isset($entity->{$field_name}['und']) ? $entity->{$field_name}['und'] : NULL;
+      $items = isset($entity->{$field_name}[LANGUAGE_NONE]) ? $entity->{$field_name}[LANGUAGE_NONE] : NULL;
       $sid = ($items) ? _workflow_get_sid_by_items($items) : FALSE;
     }
   }
@@ -790,7 +837,7 @@ function workflow_node_previous_state($entity, $entity_type = 'node', $field_nam
 
   if ($field_name && isset($entity->original)) {
     // A changed node.
-    $items = isset($entity->original->{$field_name}['und']) ? $entity->original->{$field_name}['und'] : NULL;
+    $items = isset($entity->original->{$field_name}[LANGUAGE_NONE]) ? $entity->original->{$field_name}[LANGUAGE_NONE] : NULL;
     $sid = ($items) ? _workflow_get_sid_by_items($items) : FALSE;
   }
 
