@@ -31,24 +31,24 @@ function workflowfield_field_widget_settings_form($field, $instance) {
  * This is a wrapper function for the 'workflow form' Widget. $form is modified by reference.
  */
 function workflowfield_field_widget_form(&$form, &$form_state, $field, $instance, $langcode, $items, $delta, $element) {
-  if (isset($form_state['node'])) {
-    $entity = $form_state['node'];
-    $entity_type = 'node'; // comments are only supported on nodes.
-  }
-  elseif (isset($element['#entity_type'])) {
-    // We are on an Entity add/edit page.
-    $entity = $element['#entity'];
-    $entity_type = $element['#entity_type']; // @todo: add support for other entity types.
+  if (!isset($element['#entity'])) {
+    // We are now on the 'Manage Fields | Edit' settings page, so do nothing.
+    return $element;
   }
 
-  if (!$entity) {
-    // We are now on the Field settings page, so do nothing.
-    return $element;
+  if (isset($element['#entity_type'])) {
+    // We are on an Entity add/edit page.
+    $entity_type = $element['#entity_type'];
+    $entity = $element['#entity'];
+  }
+  else {
+    // Not used: On an Entity View page, the widget is shown via 
+    // workflowfield_field_formatter_view() and workflow_transition_form().
   }
 
   if ($entity_type == 'comment') {
     // On a comment form, get the referenced entity.
-    $entity_type = 'node'; // Comments are only possible on nodes
+    $entity_type = 'node'; // Comments are only possible on nodes.
     $entity = $form['#node'];
   }
 
