@@ -560,3 +560,4 @@ Issue #2187321: Fixed message when importing workflow.
 Issue #2296843: Added more properties and functions to entities.
 Issue #2296843: Added more properties and functions to entities - remove typo.
 Issue #2205707: Added permission for workflow_comment_edit_link field handler from workflow_extensions.
+Issue #2211145: Grouped workflow action buttons together with Drupal buttons ([Save], [Preview]).
